			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04d: *********************************

IMP: (1/27/06, GVG) Update StatusBar on click on EditWindow (Bug#799).

IMP: (1/27/06, GVG) More improvements in MinArea algorithms.

BUG: (1/27/06, SMR) Inherited attributes are placed badly (Bug #788).
FIX: In CircuitChangeJobs.updateInheritedVar(), place from the icon position.

BUG: (1/27/06, SMR) Printing looks bad (Bug #785).
FIX: Redid printing interface, now chooses better colors.

BUG: (1/27/06, SMR) Modeless dialogs don't update properly.
FIX: Made HighlightListeners a static list, independent of windows.

BUG: (1/27/06, SMR) Escape key doesn't abort component menu placement (Bug #800).
FIX: In PaletteFrame.PlaceNodeListener.placeInstance(), added "wnd.requestFocus();"

IMP: (1/26/06, DN) Command-line key "-threads <recommendedNumThreads>" specifies
     recommended number of threads executing Jobs.
     "-threads 1" is convinient for debugging without thread swapping.

BUG: (1/26/06, DN) Highlight exception using wiring tool (Bug #798)
FIX: In "Job.fieldVariableChanged" search for superclass fields too.

IMP: (1/25/06, RK) Remove obsolete code

IMP: (1/25/06, SMR) Converted all usage of ErrorLogger to use single calls
     (instead of creating a log and then making extra calls to add geometric, export, etc.)
     This is necessary in order to make ErrorLogs immutable.

IMP: (1/25/06, GVG) NetworkTool.redoNetworkNumbering() skips Clipboard (hidden library) to avoid complains about unconnected pin
(Bug #793).

IMP: (1/25/06, GVG) LayerCoverage tool ready for the new client/server structure.

IMP: (1/25/06, GVG New MinArea changes that stop checking if minimums are reached. Decomissioning ALGO_QTREE structure.

IMP: (1/23/06, GVG) DRC, ParasiticTools, FillGenerator, GateRegression, GateLayoutGenerator ready for new client/server structure. 